# openai-agent-SDK

./: README.md
0New with lightllm/uv_lighllm_chainlit/: .env  README.md  chat_history.json  hello.py  main.py  pyproject.toml
chatbot/: pyproject.toml
chatbot/src/chatbot/: main0.py  main1.py  main2.py  main3.py  main4.py
dapr/dapr_test/: hello.py  main.py  main_exmp.py  pyproject.toml
external_llm/: README.md  llm.ipynb  llm_agent_run_global_level.ipynb
fastapi/fastapienv/: README.md  pyproject.toml
fastapi/fastapienv/src/fastapienv/: __init__.py  depens_class.py  depens_func.py  main.py  main1.py
hello_chainlit/: pyproject.toml
hello_chainlit/src/hello_chainlit/: animated.py
lectures/01_hello_agent/sync/hello_agent/: pyproject.toml
lectures/2_hello_agent/sync/hello_agent/src/hello_agent/: main.py
lectures/4_chainlit/hello_word/: pyproject.toml
lectures/4_chainlit/hello_word/src/hello_word/: __init__.py  chatbot.py
lectures/5.chainlit with agent/chainlit_agent/: pyproject.toml
lectures/5.chainlit with agent/chainlit_agent/src/chainlit_agent/: __init__.py  main.py
lectures/5.chainlit with agent/chainlit_agent_with_history/: pyproject.toml
lectures/5.chainlit with agent/chainlit_agent_with_history/src/: .env
lectures/5.chainlit with agent/chainlit_agent_with_history/src/chainlit_agent_with_history/: __init__.py  main.py
lectures/6.chailit with stream agent/chainlit_stream/: pyproject.toml
lectures/6.chailit with stream agent/chainlit_stream/src/chainlit_stream/: __init__.py  main.py
lectures/7.context/chatbot/: pyproject.toml
lectures/7.context/chatbot/src/chatbot/: main.py  main0.py  main1.py
op-ag/: pyproject.toml
swarm/: README.md
tylor_ai/: README.md  pyproject.toml
tylor_ai/src/tylor_ai/: __init__.py  agent_cloning.py  multiple_agents_with_tracing.py  simple_agent.py  streaming_agent.py  web_search_tools.py
