[project]
name = "fastapienv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asif-ml-developer", email = "asif.ml.developer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "numpy>=2.2.4",
    "psycopg2>=2.9.10",
    "sqlmodel>=0.0.24",
]

[project.scripts]
fastapienv = "fastapienv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
