[project]
name = "hello-word"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asif-ml-developer", email = "asif.ml.developer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.1",
]

[project.scripts]
hello-word = "hello_word:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
