[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asif-ml-developer", email = "asif.ml.developer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hello-agent = "hello_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
